Have bar drawing.  Need to fix alignment.
Bar is drawing.   I need to fix the alignment.

--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,6 @@
   border: 1px solid black;
   text-align: right;
   vertical-align: top;
-  width: 14%;
-  padding-bottom: 14%;
   position: relative;
   overflow: hidden;
   white-space: nowrap;
